// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Articles can be created/edited/deleted: can be created 1`] = `
Object {
  "data": Object {
    "createArticle": Object {
      "draft": Object {
        "publishedAt": null,
        "revision": 0,
        "updatedAt": null,
      },
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
      "shared": false,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Articles can be created/edited/deleted: can be deleted 1`] = `
Object {
  "data": Object {
    "deleteArticle": Object {
      "draft": Object {
        "publishedAt": null,
        "revision": 0,
        "updatedAt": null,
      },
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
      "shared": false,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Articles can be created/edited/deleted: can be published 1`] = `
Object {
  "data": Object {
    "publishArticle": Object {
      "draft": null,
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": Object {
        "publishedAt": "2020-11-25T23:55:35.000Z",
        "revision": 0,
        "updatedAt": "2020-11-25T23:55:35.000Z",
      },
      "shared": false,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Articles can be created/edited/deleted: can be read by id 1`] = `
Object {
  "data": Object {
    "article": Object {
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
      "shared": false,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Articles can be created/edited/deleted: can be unpublished 1`] = `
Object {
  "data": Object {
    "unpublishArticle": Object {
      "draft": Object {
        "publishedAt": null,
        "revision": 0,
        "updatedAt": null,
      },
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
      "shared": false,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Articles can be created/edited/deleted: can be updated 1`] = `
Object {
  "data": Object {
    "updateArticle": Object {
      "draft": Object {
        "publishedAt": null,
        "revision": 0,
        "updatedAt": null,
      },
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
      "shared": false,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
